--- a/index.html
+++ b/index.html
@@ -34,12 +34,23 @@
         <div class="product-sections">
             <div>
                 <img src="images/skin-4.jpeg">
+                <h4>La Roche Posay</h4>
+                <p>Vitamin C10 Serum <em>30ml</em></p>
+                <p>R650</p>
+                <button class="btn_quantity" id="btn_quantity">- 1 +</button>
+                <p>R650</p>
+                
             </div>
 
             <hr>
 
             <div>
                 <img src="images/skin-3.jpeg">
+                <h4>COSRX</h4>
+                <p>Advanced Snail Mucin Gel Cleanser <em>150ml</em></p>
+                <p>R450</p>
+                <button class="btn_quantity" id="btn_quantity">- 2 +</button>
+                <p>R900</p>
             </div>
 
         </div>
