--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skincare Shopping Cart</title>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
     <header>
@@ -39,7 +41,7 @@
                 <p>R650</p>
                 <button class="btn_quantity" id="btn_quantity">- 1 +</button>
                 <p>R650</p>
-                
+                <i class="bi bi-trash3"></i>
             </div>
 
             <hr>
@@ -51,10 +53,16 @@
                 <p>R450</p>
                 <button class="btn_quantity" id="btn_quantity">- 2 +</button>
                 <p>R900</p>
+                <i class="bi bi-trash3"></i>
             </div>
 
         </div>
 
     </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  
+
 </body>
 </html>
