--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skincare Shopping Cart</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+       <!-- Bootstrap CDN -->
+       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+           <!-- Font Awesome Link -->
+    <script src="https://kit.fontawesome.com/e340ea6f4b.js" crossorigin="anonymous"></script>
+    
+
+
 </head>
 <body>
     <header>
@@ -41,7 +48,7 @@
                 <p>R650</p>
                 <button class="btn_quantity" id="btn_quantity">- 1 +</button>
                 <p>R650</p>
-                <i class="bi bi-trash3"></i>
+                <i class="fa-regular fa-trash-can"></i>
             </div>
 
             <hr>
@@ -53,12 +60,32 @@
                 <p>R450</p>
                 <button class="btn_quantity" id="btn_quantity">- 2 +</button>
                 <p>R900</p>
-                <i class="bi bi-trash3"></i>
+                <i class="fa-regular fa-trash-can"></i>
             </div>
+
+            <hr>
+
+            <button class="btn_btn_main" id="btn_btn_main"><a href="products.html">Continue Shopping</a></button>
+
 
         </div>
 
+        <!-- Cart totals section -->
+        <div>
+            <h2>CART TOTALS</h2>
+            <hr>
+            <h3>Subtotal</h3>
+            <p>R1550</p>
+            <hr>
+            <h3>Total</h3>
+            <p>R1550</p>
+            <button class="btn_btn_main" id="btn_btn_main">Proceed to Checkout</button>
+        </div>
+
+
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
