--- a/products.html
+++ b/products.html
@@ -27,49 +27,50 @@
         <h2>HELP</h2>
     </header>
 
-    <div class="container">
+    <div class="container container-xl">
         <section class="products-container">
+            <div class="row">
         <!-- Product 1 -->
-        <div class="product-background">
+        <div class="col-lg-6-offset-2 col-md-6 product-background">
             <img src="images/skin-4.jpeg">
             <h3>La Roche Posay</h3>
             <p>Vitamin C10 Serum <em>30ml</em></p>
             <p>R650</p>
-            <button type="button" class="btn btn-color btn-lg btn_add" id="btn_add">ADD TO CART</button>
+            <button type="button" class="btn btn_add btn-color btn-lg " id="btn_add">ADD TO CART</button>
         </div>
 
         <!-- Product 2 -->
-        <div class="product-background">
+        <div class="col-lg-6 col-md-6 product-background">
             <img src="images/skin-1.jpeg">
             <h3>Anua Peach</h3>
             <p>70% Niacinamide Serum <em>30ml</em></p>
             <p>R400</p>
-            <button type="button" class="btn btn-color btn-lg btn_add" id="btn_add">ADD TO CART</button>
+            <button type="button" class="btn btn_add btn-color btn-lg " id="btn_add">ADD TO CART</button>
         </div>
 
         <!-- Product 3 -->
-        <div class="product-background">
+        <div class="col-lg-6-offset-2 col-md-6 product-background">
             <img src="images/skin-3.jpeg">
             <h3>COSRX</h3>
             <p>Advanced Snail Mucin Gel Cleanser <em>150ml</em></p>
             <p>R450</p>
-            <button type="button" class="btn btn-color btn-lg btn_add" id="btn_add">ADD TO CART</button>
+            <button type="button" class="btn btn_add btn-color btn-lg " id="btn_add">ADD TO CART</button>
         </div>
 
         <!-- Product 4 -->
-        <div class="product-background">
+        <div class="col-lg-6 col-md-6 product-background">
             <img src="images/skin-2.jpeg">
             <h3>Beauty of Joseon</h3>
             <p>Sunscreen: Rice + Probiotics <em>50ml</em></p>
             <p>R340</p>
-            <button type="button" class="btn btn-color btn-lg btn_add" id="btn_add">ADD TO CART</button>
+            <button type="button" class="btn btn_add btn-color btn-lg " id="btn_add">ADD TO CART</button>
         </div>
 
         <hr>
 
-        <button type="button" class="btn btn_main btn-color" id="btn_main"><a href="index.html">Go To Cart</a></button>
+        <button type="button" class="btn btn_main btn-color btn-lg" id="btn_main"><a href="index.html">Go To Cart</a></button>
 
-
+    </div>
     </section>
     </div>
 
