--- a/index.html
+++ b/index.html
@@ -28,68 +28,44 @@
     </header>
 
     <div class="container">
-        <div class="container-head">
-            <h2>SHOPPING BAG</h2>
-            <p id="item_number">2 ITEMS</p>
-            <div>
-                <h3>YOUR PRODUCTS</h3>
-                <h3>PRICE<h3>
-                <h3>QUANTITY</h3>
-                <h3>TOTAL</h3>
+        <div class="row">
+            <div class="col-md-8 cart">
+            
+                <!-- <div class="title">
+                    <div class="row">
+                        <div class="col"><h1>SKINCARE</h1></div>
+                        <div class="col text-right">LOGIN</div>
+                        <div class="col text-right">HELP</div>
+                    </div>
+                </div> -->
 
-                <hr>
+                <div class="title">
+                    <div class="row">
+                        <div class="col"><h2>SHOPPING BAG</h2></div>
+                        <div class="col text-muted">2 ITEMS</div>
+                    </div>
+                </div>
 
-
+                <!-- Item 1 -->
+                <div class="row border-top border-bottom">
+                    <div class="row products align-items-center">
+                        <div class="col-2"><img src="images/skin-4.jpeg" alt="" class="image-fluid"></div>
+                        <div class="col">
+                            <div class="row"><h4>La Roche Posay</h4></div>
+                            <div class="row"><p>Vitamin C10 Serum <em>30ml</em</p></div>
+                        </div>
+                        <div class="col">
+                            <
+                        </div>
+                    </div>
+                </div>
 
             </div>
-
         </div>
-
-        <!-- Start of the products -->
-        <div class="product-sections">
-            <div>
-                <img src="images/skin-4.jpeg">
-                <h4>La Roche Posay</h4>
-                <p>Vitamin C10 Serum <em>30ml</em></p>
-                <p>R650</p>
-                <button type="button" class="btn btn-color btn-lg" id="btn_quantity">- 1 +</button>
-                <p>R650</p>
-                <i class="fa-regular fa-trash-can"></i>
-            </div>
-
-            <hr>
-
-            <div>
-                <img src="images/skin-3.jpeg">
-                <h4>COSRX</h4>
-                <p>Advanced Snail Mucin Gel Cleanser <em>150ml</em></p>
-                <p>R450</p>
-                <button type="button" class="btn btn-color btn-lg" id="btn_quantity">- 2 +</button>
-                <p>R900</p>
-                <i class="fa-regular fa-trash-can"></i>
-            </div>
-
-            <hr>
-
-            <button type="button" class="btn btn_main btn-color" id="btn_main"><a href="products.html">Continue Shopping</a></button>
-
-
-        </div>
-
-        <!-- Cart totals section -->
-        <div>
-            <h2>CART TOTALS</h2>
-            <hr>
-            <h3>Subtotal</h3>
-            <p>R1550</p>
-            <hr>
-            <h3>Total</h3>
-            <p>R1550</p>
-            <button type="button" class="btn btn_main btn-color" id="btn_main">Proceed to Checkout</button>
-        </div>
-
-
     </div>
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
