--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h2>HELP</h2>
     </header>
 
-    <div class="container">
+    <div class="container mt-4">
         <div class="row">
             <div class="col-lg-10 cart">
             
@@ -46,7 +46,7 @@
                         </div>   
                     </div>
                 </div>
-
+<br>
                 <div class="title">
                     <div class="row">
                         <div class="col-md-5"><h3>Products</h3></div> 
@@ -61,19 +61,19 @@
                 <!-- Item 1 -->
                 <div class="row border-top border-bottom">
                     <div class="row products align-items-center">
-                        <div class="col-2"><img src="images/skin-4.jpeg" alt="" class="image-fluid"></div>
-                        <div class="col">
+                        <div class="col-2"><img src="images/skin-4.jpeg" alt="" class="image-fluid">
                             <div class="row"><h4>La Roche Posay</h4></div>
                             <div class="row"><p>Vitamin C10 Serum <em>30ml</em></p></div>
                         </div>
+
                         <div class="col">
                             <div class="row"><h5>R 650</h5></div>
                         </div>
                         <div class="col">
-                            <button type="button" class="btn btn-color btn-lg" id="btn_quantity">- 1 +</button>
+                            <button type="button" class="btn btn_quantity btn-color btn-lg" id="btn_quantity">- 1 +</button>
                         </div>
                         <div class="col">
-                            <div class="row"><h5>R 650</h5></div>
+                            <div class="row total-price"><h5>R 650</h5></div>
                         </div>
                         <div class="col">
                             <div class="row"><i class="fa-regular fa-trash-can"></i></div>
@@ -84,22 +84,22 @@
                  <!-- Item 2 -->
                 <div class="row border-top border-bottom">
                     <div class="row products align-items-center">
-                        <div class="col-2"><img src="images/skin-3.jpeg" alt="" class="image-fluid"></div>
-                        <div class="col">
+                        <div class="col-2"><img src="images/skin-3.jpeg" alt="" class="image-fluid">
                             <div class="row"><h4>COSRX</h4></div>
                             <div class="row"><p>Advanced Snail Mucin Gel Cleanser <em>150ml</em></p> </div>
                         </div>
+
                         <div class="col">
                             <div class="row"><h5>R 450</h5></div>
                         </div>
                         <div class="col">
-                            <button type="button" class="btn btn-color btn-lg" id="btn_quantity">- 2 +</button>
+                            <button type="button" class="btn btn_quantity btn-color btn-lg" id="btn_quantity">- 2 +</button>
                         </div>
                         <div class="col">
-                            <div class="row"><h5>R 900</h5></div>
+                            <div class="row total-price"><h5>R 900</h5></div>
                         </div>
                         <div class="col">
-                            <div class="row"><i class="fa-regular fa-trash-can"></i></div>
+                            <div class="row" ><i class="fa-regular fa-trash-can"></i></div>
                         </div>
                     </div>
                 </div>
@@ -109,23 +109,31 @@
 
             </div>
 
-            <!-- Cart Totals -->
+        <!-- Cart Totals -->
+            
             <div class="col-lg-2 cart_total">
+                <div class="title"></div>
                 <div><h3>CART TOTALS</h3></div>
                 <hr>
+                <br>
                 <div class="row">
-                    <div class="col" style="padding-left:0;">Subtotal</div>
+                    <div class="col">Subtotal</div>
                     <div class="col text-right text-muted">R 1550</div>
                 </div>
-                <div class="row" style="border-top: 1px solid rgba(0,0,0,.1); padding: 2vh 0;">
+                <br>
+                <br>
+                <div class="row">
+                    <br>
                     <div class="col">Total</div>
                     <div class="col text-right">R 1550</div>
                 </div>
-
+                <button type="button" class="btn btn_main btn-lg btn-color" id="btn_main">Proceed to Checkout</button>
             </div>
 
+
         </div>
-    </div>
+        </div>
+
 
 
 
