products page alignment

--- a/index.html
+++ b/index.html
@@ -21,24 +21,24 @@
     
 </head>
 <body>
-    <header>
-        <h1>SKINCARE</h1>
-        <h2>LOGIN</h2>
-        <h2>HELP</h2>
-    </header>
 
     <div class="container mt-4">
         <div class="row">
             <div class="col-lg-10 cart">
-            
-                <!-- <div class="title">
-                    <div class="row">
-                        <div class="col"><h1>SKINCARE</h1></div>
-                        <div class="col text-right">LOGIN</div>
-                        <div class="col text-right">HELP</div>
-                    </div>
-                </div> -->
 
+                <div class="title">
+                    <div class="row align-items-center">
+                        <div class="col">
+                            <h1>SKINCARE</h1>
+                        </div>
+                        <div class="col-auto ml-auto">
+                            <button type="button" class="btn btn_header btn-lg ml-auto">LOGIN</button>
+                            <button type="button" class="btn btn_header btn-lg ml-auto">HELP</button>
+                        </div>
+        </div>
+        </div>
+<br>
+<br>
                 <div class="title">
                     <div class="row">
                         <div class="col"><h2>SHOPPING BAG</h2>
