--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             <div class="row total-price"><h5>R 650</h5></div>
                         </div>
                         <div class="col">
-                            <div class="row"><i class="fa-regular fa-trash-can"></i></div>
+                            <div class="row"><i class="icon fa-regular fa-trash-can"></i></div>
                         </div>
                     </div>
                 </div>
@@ -99,7 +99,9 @@
                             <div class="row total-price"><h5>R 900</h5></div>
                         </div>
                         <div class="col">
-                            <div class="row" ><i class="fa-regular fa-trash-can"></i></div>
+                            <div class="row" >
+                            <i class="icon fa-regular fa-trash-can"></i>
+                            </div>
                         </div>
                     </div>
                 </div>
