--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
                 <div class="title">
                     <div class="row align-items-center">
-                        <div class="col">
+                        <div class="col my-2">
                             <h1>SKINCARE</h1>
                         </div>
                         <div class="col-auto ml-auto">
@@ -129,7 +129,9 @@
                     <div class="col">Total</div>
                     <div class="col text-right">R 1550</div>
                 </div>
-                <button type="button" class="btn btn_main btn-lg btn-color" id="btn_main">Proceed to Checkout</button>
+                <div class="text-center">
+                <button type="button" class="btn btn_main btn-lg btn-color" id="btn_main">Checkout</button>
+            </div>
             </div>
 
 
