created js file

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <div class="col text-right">R 1550</div>
                 </div>
                 <div class="text-center">
-                <button type="button" class="btn btn_main btn-lg btn-color" id="btn_main">Checkout</button>
+                <button onclick="alert('Thank You for shopping')" type="button" class="btn btn_main btn-lg btn-color" id="btn_main">Checkout</button>
             </div>
             </div>
 
@@ -150,3 +150,4 @@
 
 </body>
 </html>
+
