--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <!-- CSS Stylesheet -->
     <link rel="stylesheet" href="style.css">
 
+    <!-- JavaScript file -->
+    <script src="main.js"></script>
+
        <!-- Bootstrap CDN -->
        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -130,7 +133,7 @@
                     <div class="col text-right">R 1550</div>
                 </div>
                 <div class="text-center">
-                <button onclick="alert('Thank You for shopping')" type="button" class="btn btn_main btn-lg btn-color" id="btn_main">Checkout</button>
+                <button onclick="displayMessage()" type="button" class="btn btn_main btn-lg btn-color" id="btn_main">Checkout</button>
             </div>
             </div>
 
