--- a/index.html
+++ b/index.html
@@ -25,32 +25,26 @@
 </head>
 <body>
 
+    
+
     <div class="container mt-4">
         <div class="row">
             <div class="col-lg-10 cart">
 
+
                 <div class="title">
                     <div class="row align-items-center">
-                        <div class="col my-2">
-                            <h1>SKINCARE</h1>
-                        </div>
+                        <div class="col"><h2>SHOPPING BAG</h2>
+                            <div class="col text-muted">2 ITEMS</div>
+                        </div>   
                         <div class="col-auto ml-auto">
                             <button type="button" class="btn btn_header btn-lg ml-auto">LOGIN</button>
                             <button type="button" class="btn btn_header btn-lg ml-auto">HELP</button>
                         </div>
-        </div>
-        </div>
-<br>
-<br>
-                <div class="title">
-                    <div class="row">
-                        <div class="col"><h2>SHOPPING BAG</h2>
-                            <div class="col text-muted">2 ITEMS</div>
-                        </div>   
                     </div>
                 </div>
 <br>
-                <div class="title">
+                <div class="title mb-2">
                     <div class="row">
                         <div class="col-md-5"><h3>Products</h3></div> 
                         <div class="col md-5"><h3>Price</h3></div>
