--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                             <div class="row"><h4>La Roche Posay</h4></div>
                             <div class="row"><p>Vitamin C10 Serum <em>30ml</em></p></div>
                         </div>
+                    </div>
 
                         <div class="col">
                             <div class="row"><h5>R 650</h5></div>
@@ -134,6 +135,8 @@
 
         </div>
         </div>
+
+
 
 
 
