--- a/products.html
+++ b/products.html
@@ -43,7 +43,7 @@
         <!-- Product 1 -->
         <div class="col-lg-3">
             <div class="product-background">
-                <img class="img_products" src="images/skin-8.jpeg">
+                <img class="img_products" src="images/skin-8.jpeg" alt="">
                 <h4>Maaemo</h4>
                 <p>Hydrating Face Cream <em>100ml</em></p>
                 <h6>R350</h6>
