--- a/products.html
+++ b/products.html
@@ -28,9 +28,8 @@
         <!-- SkinCare / Login / Help Headings -->
         <div class="title my-2">
             <div class="row align-items-center my-4">
-                <div class="col">
-                    <h1>SKINCARE</h1>
-        <!-- Add to cart-->
+                <div class="col"><h2 class="p-2">SKIN°CARE | PRODUCTS</h2>
+                    <div class="col text-muted">PRODUCTS</div>
                 </div>
 
                 <div class="col-auto ml-auto">  
@@ -58,11 +57,13 @@
         <div class="col-lg-6">
             <div class="product-container d-flex justify-content-center">
             <div class="product-background">
-                <img class="img_products" src="images/skin-8.jpeg" alt="">
+                <img src="images/skin-8.jpeg" class="img_products"  alt="Maaemo Hydrating Face Cream">
                 <h4>Maaemo</h4>
                 <p>Hydrating Face Cream <em>100ml</em></p>
                 <h6>R350</h6>
-                <button type="button" class="btn btn_add btn-color btn-lg " id="btn_add">ADD TO CART</button>
+                <div class="text-center">
+                    <button type="button" class="btn btn_add btn-color btn-lg text-center" id="addToCart">ADD TO CART</button>
+                </div>
             </div>
         </div>
     </div>
@@ -75,7 +76,9 @@
             <h4>La Roche Posay</h4>
             <p>Vitamin C10 Serum <em>30ml</em></p>
             <h6>R650</h6>
-            <button type="button" class="btn btn_add btn-color btn-lg " id="btn_add">ADD TO CART</button>
+            <div class="text-center">
+                <button type="button" class="btn btn_add btn-color btn-lg text-center" id="addToCart">ADD TO CART</button>
+            </div>
           </div>
         </div>
     </div>
@@ -86,6 +89,21 @@
 
         <div class="row">
         <!-- Product 3 -->
+        <div class="col-lg-6">
+            <div class="product-container d-flex justify-content-center">
+             <div class="product-background">
+                <img class="img_products" src="images/skin-9.jpeg">
+                <h4>La Roche Posay</h4>
+                <p>Retinol B3 Serum <em>30ml</em></p>
+                <h6>R770</h6>
+                <div class="text-center">
+                    <button type="button" class="btn btn_add btn-color btn-lg text-center" id="addToCart">ADD TO CART</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+        <!-- Product 4 -->
             <div class="col-lg-6">
                 <div class="product-container d-flex justify-content-center">
             <div class="product-background">
@@ -93,23 +111,13 @@
             <h4>COSRX</h4>
             <p>Snail Mucin Gel Cleanser <em>150ml</em></p>
             <h6>R450</h6>
-            <button type="button" class="btn btn_add btn-color btn-lg " id="btn_add">ADD TO CART</button>
+            <div class="text-center">
+                <button type="button" class="btn btn_add btn-color btn-lg text-center" id="addToCart">ADD TO CART</button>
+            </div>
         </div>
     </div>
 </div>
 
-        <!-- Product 4 -->
-        <div class="col-lg-6">
-        <div class="product-container d-flex justify-content-center">
-         <div class="product-background">
-            <img class="img_products" src="images/skin-9.jpeg">
-            <h4>La Roche Posay</h4>
-            <p>Retinol B3 Serum <em>30ml</em></p>
-            <h6>R770</h6>
-            <button type="button" class="btn btn_add btn-color btn-lg " id="btn_add">ADD TO CART</button>
-        </div>
-    </div>
-</div>
 </div>
 </div>
 
