quantity adding and subtracting

--- a/products.html
+++ b/products.html
@@ -54,13 +54,13 @@
         <div class="row">
 
     <!-- Product 1 -->
-        <div class="col-lg-6">
+        <div class="col-lg-6" id="maaemoProduct">
             <div class="product-container d-flex justify-content-center">
             <div class="product-background">
                 <img src="images/skin-8.jpeg" class="img_products"  alt="Maaemo Hydrating Face Cream">
                 <h4>Maaemo</h4>
                 <p>Hydrating Face Cream <em>100ml</em></p>
-                <h6>R350</h6>
+                <h6 id="maaemoPrice">R350</h6>
                 <div class="text-center">
                     <button type="button" class="btn btn_add btn-color btn-lg text-center" id="addToCart">ADD TO CART</button>
                 </div>
@@ -69,13 +69,13 @@
     </div>
 
     <!-- Product 2 -->
-        <div class="col-lg-6">
+        <div class="col-lg-6" id="posayProduct">
             <div class="product-container d-flex justify-content-center">
             <div class="product-background">
             <img class="img_products" src="images/skin-4.jpeg">
             <h4>La Roche Posay</h4>
             <p>Vitamin C10 Serum <em>30ml</em></p>
-            <h6>R650</h6>
+            <h6 id="posayPrice">R650</h6>
             <div class="text-center">
                 <button type="button" class="btn btn_add btn-color btn-lg text-center" id="addToCart">ADD TO CART</button>
             </div>
