--- a/products.html
+++ b/products.html
@@ -22,112 +22,7 @@
 </head>
 <body>
     
-    <section>
-    <div class="container">
-
-        <!-- SkinCare / Login / Help Headings -->
-        <div class="title my-2">
-            <div class="row align-items-center my-4">
-                <div class="col"><h2 class="p-2">SKIN°CARE | PRODUCTS</h2>
-                    <div class="col text-muted">PRODUCTS</div>
-                </div>
-
-                <div class="col-auto ml-auto">  
-                    <div class="d-flex align-items-center">
-                    <a href="index.html" class="ml-auto"><i class="icon-cart fa-solid fa-cart-shopping"></i></a>  
-                    <button type="button" class="btn btn_header btn-lg">LOGIN</button>
-                    <div class="mx-4">
-                        <button type="button" class="btn btn_header btn-lg">HELP</button>
-                    </div>                  
-                </div>
-                </div>      
-            </div>
-        </div>
-
-
-    <div class="cart-products">
-        <div class="col-md-12 col-lg-10 mx-auto">
-
-
-        
-        <div class="cart-item">
-        <div class="row">
-
-    <!-- Product 1 -->
-        <div class="col-lg-6" id="maaemoProduct">
-            <div class="product-container d-flex justify-content-center">
-            <div class="product-background">
-                <img src="images/skin-8.jpeg" class="img_products"  alt="Maaemo Hydrating Face Cream">
-                <h4>Maaemo</h4>
-                <p>Hydrating Face Cream <em>100ml</em></p>
-                <h6 id="maaemoPrice">R350</h6>
-                <div class="text-center">
-                    <button type="button" class="btn btn_add btn-color btn-lg text-center" id="addToCart">ADD TO CART</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Product 2 -->
-        <div class="col-lg-6" id="posayProduct">
-            <div class="product-container d-flex justify-content-center">
-            <div class="product-background">
-            <img class="img_products" src="images/skin-4.jpeg">
-            <h4>La Roche Posay</h4>
-            <p>Vitamin C10 Serum <em>30ml</em></p>
-            <h6 id="posayPrice">R650</h6>
-            <div class="text-center">
-                <button type="button" class="btn btn_add btn-color btn-lg text-center" id="addToCart">ADD TO CART</button>
-            </div>
-          </div>
-        </div>
-    </div>
-</div>
-
-<br>
-<br>
-
-        <div class="row">
-        <!-- Product 3 -->
-        <div class="col-lg-6">
-            <div class="product-container d-flex justify-content-center">
-             <div class="product-background">
-                <img class="img_products" src="images/skin-9.jpeg">
-                <h4>La Roche Posay</h4>
-                <p>Retinol B3 Serum <em>30ml</em></p>
-                <h6>R770</h6>
-                <div class="text-center">
-                    <button type="button" class="btn btn_add btn-color btn-lg text-center" id="addToCart">ADD TO CART</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-        <!-- Product 4 -->
-            <div class="col-lg-6">
-                <div class="product-container d-flex justify-content-center">
-            <div class="product-background">
-            <img class="img_products" src="images/skin-6.jpeg">
-            <h4>COSRX</h4>
-            <p>Snail Mucin Gel Cleanser <em>150ml</em></p>
-            <h6>R450</h6>
-            <div class="text-center">
-                <button type="button" class="btn btn_add btn-color btn-lg text-center" id="addToCart">ADD TO CART</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-</div>
-</div>
-
-
-
-
-        </div>
-    </div>
-    </section>
-
+   
 
 
 
@@ -139,6 +34,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   
+    <script src="main.js"></script>
 
 </body>
 </html>    
