removed plus sign

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                       <p>Vitamin C10 Serum <em>30ml</em></p>
                       <h6 id="posayPrice">R650</h6>
                     <div class="text-center">
-                        <button type="button" class="btn btn_add btn-color btn-lg text-center" onclick="addToCart(event, 2)">ADD TO CART+</button>
+                        <button type="button" class="btn btn_add btn-color btn-lg text-center" onclick="addToCart(event, 2)">ADD TO CART</button>
                     </div>
                 </div>
                   </div>
