--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
     <script src="main.js"></script>
 
     <!-- Bootstrap CDN -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+      <link rel=”stylesheet” href=”css/bootstrap.css”>
+      <link rel=”stylesheet” href=”css/bootstrap-responsive.css”>
     />
 
     <!-- Google Font -->
@@ -57,7 +55,7 @@
             <div class="col-md-4"><h3>Products</h3></div>
             <div class="col-md-2"><h3>Price</h3></div>
             <div class="col-md-2"><h3>Quantity</h3></div>
-            <div class="col-md-2"><h3>Total</h3></div>
+            <div class="col-md-2"><h3>SubTotal</h3></div>
             <div class="col-md-1"><h3>Delete</h3></div>
           </div>
         </div>
@@ -68,7 +66,7 @@
       <div class="cart-item-container mt-4">
           <div class="row g-2">
             <div class="col-6">
-                <h5 class="item-subtotal">SubTotal:</h5>
+                <h5 class="item-subtotal">Total:</h5>
             </div>
 
             <div class="col-6 status">
